fix: coloring and spacing

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -7,6 +7,11 @@
   background-color: #222;
 }
 
+.landing-info {
+  padding: 60px 0px;
+  background-color: #222;
+}
+
 .landing-images {
   padding: 40px;
 }
